--- a/index.html
+++ b/index.html
@@ -117,13 +117,13 @@
         <li>
           <a href="#"
             ><span class="accent">✦</span> Тема 8:
-            <span class="accent-3"> Двовимірні масиви (частина 1) </span></a
+            <span class="accent-3"> Двовимірні масиви (ч. 1) </span></a
           >
         </li>
         <li>
           <a href="#"
             ><span class="accent">✦</span> Тема 9:
-            <span class="accent-3"> Двовимірні масиви (частина 2) </span></a
+            <span class="accent-3"> Двовимірні масиви (ч. 2) </span></a
           >
         </li>
         <li>
@@ -147,13 +147,13 @@
         <li>
           <a href="#"
             ><span class="accent">✦</span> Тема 13:
-            <span class="accent-3">Класи (частина 1)</span></a
+            <span class="accent-3">Класи (ч. 1)</span></a
           >
         </li>
         <li>
           <a href="#"
             ><span class="accent">✦</span> Тема 14:
-            <span class="accent-3">Класи (частина 2)</span></a
+            <span class="accent-3">Класи (ч. 2)</span></a
           >
         </li>
         <li>
@@ -195,13 +195,13 @@
         <li>
           <a href="#"
             ><span class="accent">✦</span> Тема 21:
-            <span class="accent-3">Анімація (частина 1)</span></a
+            <span class="accent-3">Анімація (ч. 1)</span></a
           >
         </li>
         <li>
           <a href="#"
             ><span class="accent">✦</span> Тема 22:
-            <span class="accent-3">Анімація (частина 2)</span></a
+            <span class="accent-3">Анімація (ч. 2)</span></a
           >
         </li>
         <li>
@@ -219,13 +219,13 @@
         <li>
           <a href="#"
             ><span class="accent">✦</span> Тема 25:
-            <span class="accent-3"> Події клавіатури (частина 1) </span></a
+            <span class="accent-3"> Події клавіатури (ч. 1) </span></a
           >
         </li>
         <li>
           <a href="#"
             ><span class="accent">✦</span> Тема 26:
-            <span class="accent-3"> Події клавіатури (частина 2) </span></a
+            <span class="accent-3"> Події клавіатури (ч. 2) </span></a
           >
         </li>
         <li>
