--- a/07-arrays/index.html
+++ b/07-arrays/index.html
@@ -730,11 +730,9 @@ printLength(colors[4]);</code></pre>
                 назву кожного кольору та його довжину:
               </p>
 
-              <pre><code class="language-javascript">colors.forEach(
-  function (color) {
-    console.log(`${color} -> ${color.length}`);
-  }
-);</code></pre>
+              <pre><code class="language-javascript">colors.forEach(function (color) {
+  console.log(`${color} -> ${color.length}`);
+});</code></pre>
 
               <p>
                 Те саме можна записати коротше за допомогою
