--- a/07-arrays/index.html
+++ b/07-arrays/index.html
@@ -870,20 +870,21 @@ console.log("Середнє арифметичне:", sum / numbers.length);</co
 
         <!-- *************** Частина 4 - домашнє завдання *************** -->
         <div class="tab-content" id="tab-part4">
+          <!-- КОД ДЛЯ ПОВТОРЕННЯ -->
           <section>
-            <hr />
+            <div class="flex toggle-header">
+              <button type="button">▶</button>
+              <h2>Повторення</h2>
+            </div>
 
-            <h2 style="text-align: center">Домашнє завдання</h2>
+            <div class="content">
+              <h3>✨ Код для повторення теми</h3>
+              <p>
+                Ознайомтеся з наведеним нижче кодом та спробуйте самостійно
+                розібратися, що робить кожен рядок:
+              </p>
 
-            <hr />
-
-            <h3>✨ Код для повторення теми</h3>
-            <p>
-              Ознайомтеся з наведеним нижче кодом та спробуйте самостійно
-              розібратися, що робить кожен рядок:
-            </p>
-
-            <pre><code class="language-javascript">const numbers = [];
+              <pre><code class="language-javascript">const numbers = [];
 
 numbers.push(1);
 numbers.push(2);
@@ -899,42 +900,58 @@ for (let i = 0; i < numbers.length; i++) {
 
 console.log(numbers);</code></pre>
 
-            <p>Що виведеться у консоль після виконання цього коду?</p>
-            <ol style="list-style-type: upper-alpha">
-              <li><img src="./images/hw_01.jpg" alt="code result" /></li>
-              <li><img src="./images/hw_02.jpg" alt="code result" /></li>
-              <li><img src="./images/hw_03.jpg" alt="code result" /></li>
-              <li><img src="./images/hw_04.jpg" alt="code result" /></li>
-              <li><img src="./images/hw_05.jpg" alt="code result" /></li>
-            </ol>
+              <p>Що виведеться у консоль після виконання цього коду?</p>
+              <ol style="list-style-type: upper-alpha">
+                <li><img src="./images/hw_01.jpg" alt="code result" /></li>
+                <li><img src="./images/hw_02.jpg" alt="code result" /></li>
+                <li><img src="./images/hw_03.jpg" alt="code result" /></li>
+                <li><img src="./images/hw_04.jpg" alt="code result" /></li>
+                <li><img src="./images/hw_05.jpg" alt="code result" /></li>
+              </ol>
+            </div>
+          </section>
 
-            <hr />
+          <!-- ENGLISH -->
+          <section>
+            <div class="flex toggle-header">
+              <button type="button">▶</button>
+              <h2>English</h2>
+            </div>
 
-            <h3>✨ Тест для закріплення знань</h3>
-            <p>
-              Щоб повторити і краще запам'ятати тему, пройдіть тест за
-              посиланням:
-            </p>
-            <a
-              href="https://forms.gle/Gm3Xg5gLDZwdDmqf6"
-              target="_blank"
-              class="test-link"
-              >Тест</a
-            >
+            <div class="content">
+              <h3>✨ English dictionary</h3>
+              <p>Англійські слова до теми:</p>
+              <ul class="example">
+                <li><b>array</b> — масив;</li>
+                <li><b>length</b> — довжина;</li>
+                <li><b>for</b> — для;</li>
+                <li><b>each</b> — кожен;</li>
+                <li><b>index</b> — індекс;</li>
+                <li><b>iteration</b> — повторення.</li>
+              </ul>
+            </div>
+          </section>
 
-            <hr />
+          <!-- ТЕСТ -->
+          <section>
+            <div class="flex toggle-header">
+              <button type="button">▶</button>
+              <h2 class="accent">Тест</h2>
+            </div>
 
-            <h3>✨ English dictionary</h3>
-            <p>Англійські слова до теми:</p>
-            <ul class="example">
-              <li><b>array</b> — масив;</li>
-              <li><b>length</b> — довжина;</li>
-              <li><b>for</b> — для;</li>
-              <li><b>each</b> — кожен;</li>
-              <li><b>index</b> — індекс;</li>
-              <li><b>iteration</b> — повторення.</li>
-            </ul>
-            <hr />
+            <div class="content">
+              <h3>✨ Тест для закріплення знань</h3>
+              <p>
+                Щоб повторити і краще запам'ятати тему, пройдіть тест за
+                посиланням:
+              </p>
+              <a
+                href="https://forms.gle/Gm3Xg5gLDZwdDmqf6"
+                target="_blank"
+                class="test-link"
+                >Тест</a
+              >
+            </div>
           </section>
         </div>
       </main>
