--- a/07-arrays/index.html
+++ b/07-arrays/index.html
@@ -74,7 +74,7 @@
           <div><h1>⭒.⋆ Тема 7 ⋆˚.</h1></div>
         </div>
 
-        <p class="topic"><span class="accent">Масиви</span></p>
+        <p>Масиви</p>
 
         <!-- Вкладки (навігація між частинами) -->
         <nav class="tabs">
@@ -102,7 +102,7 @@
         <div class="tab-content active" id="tab-part1">
           <!-- ТЕОРІЯ 1 -->
           <section>
-            <div class="flex toggle-header">
+            <div class="toggle-header">
               <button type="button">▶</button>
               <h2>Теорія</h2>
             </div>
@@ -229,14 +229,14 @@ console.log(colors.indexOf("black"));  // -1</code></pre>
 
           <!-- ПРИКЛАД 1 -->
           <section>
-            <div class="flex toggle-header">
+            <div class="toggle-header">
               <button type="button">▶</button>
               <h2>Приклад</h2>
             </div>
 
             <div class="content">
               <h3>✨ Завдання</h3>
-              <ol class="example">
+              <ol>
                 <li>
                   Створити масив <span class="accent">numbers</span> зі
                   значеннями: <span class="accent">2, -4, 6, 8, 10</span>.
@@ -295,14 +295,14 @@ console.log(`-4 має індекс: ${numbers.indexOf(-4)}`); // виводим
 
           <!-- ЗАВДАННЯ 1 -->
           <section>
-            <div class="flex toggle-header">
+            <div class="toggle-header">
               <button type="button">▶</button>
               <h2 class="accent">Завдання 1</h2>
             </div>
 
             <div class="content">
               <h3>✨ Завдання</h3>
-              <ol class="example">
+              <ol>
                 <li>
                   Створити масив <span class="accent">fruits</span> зі
                   значеннями:
@@ -343,7 +343,7 @@ console.log(`-4 має індекс: ${numbers.indexOf(-4)}`); // виводим
         <div class="tab-content" id="tab-part2">
           <!-- ТЕОРІЯ 2 -->
           <section>
-            <div class="flex toggle-header">
+            <div class="toggle-header">
               <button type="button">▶</button>
               <h2>Теорія</h2>
             </div>
@@ -464,7 +464,7 @@ console.log(colors);</code></pre>
 
           <!-- ПРИКЛАД 2 -->
           <section>
-            <div class="flex toggle-header">
+            <div class="toggle-header">
               <button type="button">▶</button>
               <h2>Приклад</h2>
             </div>
@@ -476,7 +476,7 @@ console.log(colors);</code></pre>
                 <span class="accent">numbers = [2, -4, 6, 100, 10]</span>:
               </p>
 
-              <ol class="example">
+              <ol>
                 <li>Вивести в консоль увесь масив.</li>
                 <li>
                   Видалити з масиву
@@ -527,7 +527,7 @@ console.log(numbers);</code></pre>
 
           <!-- ЗАВДАННЯ 2 -->
           <section>
-            <div class="flex toggle-header">
+            <div class="toggle-header">
               <button type="button">▶</button>
               <h2 class="accent">Завдання 2</h2>
             </div>
@@ -541,7 +541,7 @@ console.log(numbers);</code></pre>
                 >:
               </p>
 
-              <ol class="example">
+              <ol>
                 <li>Вивести в консоль увесь масив.</li>
                 <li>
                   Видалити з масиву
@@ -575,7 +575,7 @@ console.log(numbers);</code></pre>
         <div class="tab-content" id="tab-part3">
           <!-- ТЕОРІЯ 3 -->
           <section>
-            <div class="flex toggle-header">
+            <div class="toggle-header">
               <button type="button">▶</button>
               <h2>Теорія</h2>
             </div>
@@ -766,7 +766,7 @@ printLength(colors[4]);</code></pre>
 
           <!-- ПРИКЛАД 3 -->
           <section>
-            <div class="flex toggle-header">
+            <div class="toggle-header">
               <button type="button">▶</button>
               <h2>Приклад</h2>
             </div>
@@ -778,7 +778,7 @@ printLength(colors[4]);</code></pre>
                 <span class="accent">numbers = [2, 5, -4, 100, 0]</span>:
               </p>
 
-              <ol class="example">
+              <ol>
                 <li>
                   <span class="accent">Перебрати</span> всі числа масиву одне за
                   одним і вивести у консоль
@@ -827,7 +827,7 @@ console.log("Середнє арифметичне:", sum / numbers.length);</co
 
           <!-- ЗАВДАННЯ 3 -->
           <section>
-            <div class="flex toggle-header">
+            <div class="toggle-header">
               <button type="button">▶</button>
               <h2 class="accent">Завдання 3</h2>
             </div>
@@ -840,7 +840,7 @@ console.log("Середнє арифметичне:", sum / numbers.length);</co
                   >fruits = ["apple", "banana", "kiwi", "pineapple"]</span
                 >:
               </p>
-              <ol class="example">
+              <ol>
                 <li>
                   <span class="accent">Перебрати</span> всі елементи масиву один
                   за одним і вивести у консоль
@@ -872,7 +872,7 @@ console.log("Середнє арифметичне:", sum / numbers.length);</co
         <div class="tab-content" id="tab-part4">
           <!-- КОД ДЛЯ ПОВТОРЕННЯ -->
           <section>
-            <div class="flex toggle-header">
+            <div class="toggle-header">
               <button type="button">▶</button>
               <h2>Повторення</h2>
             </div>
@@ -913,7 +913,7 @@ console.log(numbers);</code></pre>
 
           <!-- ENGLISH -->
           <section>
-            <div class="flex toggle-header">
+            <div class="toggle-header">
               <button type="button">▶</button>
               <h2>English</h2>
             </div>
@@ -921,7 +921,7 @@ console.log(numbers);</code></pre>
             <div class="content">
               <h3>✨ English dictionary</h3>
               <p>Англійські слова до теми:</p>
-              <ul class="example">
+              <ul>
                 <li><b>array</b> — масив;</li>
                 <li><b>length</b> — довжина;</li>
                 <li><b>for</b> — для;</li>
@@ -934,7 +934,7 @@ console.log(numbers);</code></pre>
 
           <!-- ТЕСТ -->
           <section>
-            <div class="flex toggle-header">
+            <div class="toggle-header">
               <button type="button">▶</button>
               <h2 class="accent">Тест</h2>
             </div>
