--- a/07-arrays/index.html
+++ b/07-arrays/index.html
@@ -664,10 +664,10 @@ printLength(colors[4]);</code></pre>
   printLength(colors[i]);
 }</code></pre>
 
-              <img
+              <!-- <img
                 src="./images/part_3_03.jpg"
                 alt="Приклад перебору масиву циклом for"
-              />
+              /> -->
 
               <p>У цьому прикладі:</p>
               <ul class="example">
