--- a/07-arrays/index.html
+++ b/07-arrays/index.html
@@ -258,7 +258,8 @@ console.log(colors.indexOf("black"));  // -1</code></pre>
                 <li>
                   Знайти і вивести <span class="accent">останній</span> елемент
                   масиву, використавши властивіть
-                  <span class="accent">.length</span>.
+                  <span class="accent">.length</span> для обчислення його
+                  індексу.
                 </li>
                 <li>
                   Знайти і вивести <span class="accent">індекc</span> елемента
@@ -325,7 +326,8 @@ console.log(`-4 має індекс: ${numbers.indexOf(-4)}`); // виводим
                 <li>
                   Знайти і вивести <span class="accent">останнє</span> значення
                   масиву, використавши властивіть
-                  <span class="accent">.length</span>.
+                  <span class="accent">.length</span> для обчислення його
+                  індексу.
                 </li>
                 <li>
                   Знайти і вивести <span class="accent">індекc</span> елемента
