--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
          Власні стилі та скрипти
     *************************************************** -->
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="menu.css" />
     <script src="script.js" defer></script>
   </head>
 
@@ -92,7 +93,7 @@
         <li>
           <a href="#"
             ><span class="accent">✦</span> Тема 4:<span class="accent-3">
-              Взаємодія з користувачем і сторінкою
+              Взаємодія зі сторінкою
             </span></a
           >
         </li>
@@ -115,7 +116,7 @@
           >
         </li>
         <li>
-          <a href="#"
+          <a href="./08-2d-arrays/index.html"
             ><span class="accent">✦</span> Тема 8:
             <span class="accent-3"> Двовимірні масиви (ч. 1) </span></a
           >
