--- a/08-2d-arrays/index.html
+++ b/08-2d-arrays/index.html
@@ -71,8 +71,8 @@
           <div><h1>⭒.⋆ Тема 8 ⋆˚.</h1></div>
         </div>
 
-        <p>1) Двовимірні масиви</p>
-        <p>2) Типи даних</p>
+        <p>Двовимірні масиви</p>
+        <!-- <p>2) Типи даних</p> -->
 
         <!-- Вкладки (навігація між частинами) -->
         <nav class="tabs">
